[package]
name = "protogen_renderer_bevy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version="0.18.0", default-features = false, features = ["bevy_log", "bevy_render", "scene", "3d_bevy_render", "bevy_asset", "bevy_gltf", "debug"] }
crossbeam-channel = "0.5.15"
bevy-inspector-egui = { version = "0.36", optional = true }

[features]
# tool = ["bevy/3d", "bevy-inspector-egui", "bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
